--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:h="http://java.sun.com/jsf/html"
 	  xmlns:p="http://primefaces.org/ui"
-	  xmlns:ui="http://java.sun.com/jsf/facelets">
+	  xmlns:f="http://java.sun.com/jsf/core">
 
 <h:head>
 	<script src="http://maps.google.com/maps/api/js?key=AIzaSyAROK-tcjq-UrcC5lAbxl058iP2fRrvJnA" type="text/javascript"></script>
@@ -12,8 +12,32 @@
 
 <h:body style="margin-left:50px">
 
-	<p:gmap center="45.73112968,21.26176688" zoom="17" type="HYBRID" style="width:100%;height:400px"
-			model="#{markersView.simpleModel}"/>
+	<h:form>
+		<p:growl id="messages" showDetail="true" life="2000"/>
+
+		<div class="card">
+
+			<p:graphicImage name="header.PNG" library="demo"/>
+			<!-- TODO Image Not Workig for now -->
+
+			<p:tabMenu activeIndex="#{param.i}">
+				<p:menuitem value="Routes" outcome="index" icon="pi pi-fw pi-home">
+					<f:param name="i" value="0"/>
+				</p:menuitem>
+				<p:menuitem value="Vehicles" outcome="index" icon="pi pi-fw pi-calendar">
+					<f:param name="i" value="1"/>
+				</p:menuitem>
+				<p:menuitem value="Settings" outcome="index" icon="pi pi-fw pi-cog">
+					<f:param name="i" value="4"/>
+				</p:menuitem>
+			</p:tabMenu>
+
+			<p:gmap center="45.73112968,21.26176688" zoom="17" type="ROADMAP" style="height:800px"
+					model="#{markersView.simpleModel}">
+				<p:ajax event="overlaySelect" listener="#{markersView.onMarkerSelect}" update="messages"/>
+			</p:gmap>
+		</div>
+	</h:form>
 
 </h:body>
 </html>
