--- a/src/main/webapp/settings.xhtml
+++ b/src/main/webapp/settings.xhtml
@@ -25,21 +25,65 @@
 					<f:param name="i" value="0"/>
 				</p:menuitem>
 				<p:menuitem value="Vehicle locations" outcome="index" icon="pi pi-fw pi-home" url="page1.xhtml?i=1">
-					<f:param name="i" value="0"/>
+					<f:param name="i" value="1"/>
 				</p:menuitem>
 				<p:menuitem value="Settings" outcome="index" icon="pi pi-fw pi-cog" url="settings.xhtml?i=2">
-					<f:param name="i" value="4"/>
+					<f:param name="i" value="2"/>
 				</p:menuitem>
 			</p:tabMenu>
-
-			<div class="p-field p-col-12 p-md-4">
-				<h5>Express</h5>
-				<div class="knob-container ui-corner-all">
-					<p:knob foregroundColor="#2196F3" backgroundColor="#495057" value="2"/>
-				</div>
-			</div>
-
 		</div>
+		<p:spacer width="100" height="32"/>
+		<div class="p-field p-col-12 p-md-4">
+			<div>
+				<label for="systemStatus">System Status</label><p:spacer width="100" height="32"/>
+				<p:toggleSwitch id="systemStatus" disabled="true" style="color: chartreuse" value="#{serverCommunicationNotification.systemStatus}"/>
+			</div>
+		</div>
+		<p:spacer width="100" height="32"/>
+		<div class="p-field p-col-12 p-md-4">
+			<h3>Routes</h3>
+			<div>
+				<label for="e1">Express 1</label><p:spacer width="100" height="32"/>
+				<p:toggleSwitch id="e1" disabled="true" style="color: chartreuse" value="#{serverCommunicationNotification.systemStatus}"/>
+			</div>
+			<div>
+				<label for="e2">Express 2</label><p:spacer width="100" height="32"/>
+				<p:toggleSwitch id="e2" disabled="true" style="color: chartreuse" value="true"/>
+			</div>
+			<div>
+				<label for="e3">Express 3</label><p:spacer width="100" height="32"/>
+				<p:toggleSwitch id="e3" disabled="true" style="color: chartreuse" value="#{serverCommunicationNotification.systemStatus}"/>
+			</div>
+			<div>
+				<label for="e4">Express 2</label><p:spacer width="100" height="32"/>
+				<p:toggleSwitch id="e4" disabled="true" style="color: chartreuse" value="#{serverCommunicationNotification.systemStatus}"/>
+			</div>
+			<div>
+				<label for="e5">Express 2</label><p:spacer width="100" height="32"/>
+				<p:toggleSwitch id="e5" disabled="true" style="color: chartreuse" value="#{serverCommunicationNotification.systemStatus}"/>
+			</div>
+			<div>
+				<label for="n15">Line 15</label><p:spacer width="115" height="32"/>
+				<p:toggleSwitch id="n15" disabled="true" style="color: chartreuse" value="#{serverCommunicationNotification.systemStatus}"/>
+			</div>
+			<div>
+				<label for="n16">Line 16</label><p:spacer width="115" height="32"/>
+				<p:toggleSwitch id="n16" disabled="true" style="color: chartreuse" value="#{serverCommunicationNotification.systemStatus}"/>
+			</div>
+			<div>
+				<label for="n17">Line 17</label><p:spacer width="115" height="32"/>
+				<p:toggleSwitch id="n17" disabled="true" style="color: chartreuse" value="#{serverCommunicationNotification.systemStatus}"/>
+			</div>
+			<div>
+				<label for="n18">Line 18</label><p:spacer width="115" height="32"/>
+				<p:toggleSwitch id="n18" disabled="true" style="color: chartreuse" value="#{serverCommunicationNotification.systemStatus}"/>
+			</div>
+			<div>
+				<label for="n19">Line 19</label><p:spacer width="115" height="32"/>
+				<p:toggleSwitch id="n19" disabled="true" style="color: chartreuse" value="#{serverCommunicationNotification.systemStatus}"/>
+			</div>
+		</div>
+
 	</h:form>
 
 </h:body>
